Rename main python file; Update readme; cleanup code

--- a/.pylintrc.toml
+++ b/.pylintrc.toml
@@ -1,3 +1,12 @@
 [tool.pylint]
-disable = ["logging-fstring-interpolation"]
+disable = [
+    "fixme",
+    "import-error",
+    "logging-fstring-interpolation",
+    "too-many-arguments",
+    "too-many-positional-arguments",
+    "too-many-instance-attributes",
+    "too-few-public-methods",
+    "too-many-locals"
+]
 max-line-length = 120
